Bug 1262110 - Null out nsIMacDockSupport.dockMenu on shutdown. r=smaug.

--HG--
extra : rebase_source : 230f640b44d8ecbb846780584c608827d012680c